# sjmj-ai

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Makefile  README.md
.claude/ai-context/: api-spec.json
.claude/rules/: api-conventions.md
.claude/rules/common/: code-review.md  coding-style.md  development-workflow.md  patterns.md  security.md  testing.md
.github/workflows/: ci.yml  deploy.yml
apps/invoice-ocr/backend/: AGENTS.md  pyproject.toml
apps/invoice-ocr/backend/app/: __init__.py  config.py  db.py  main.py
apps/invoice-ocr/backend/app/core/: __init__.py  envelope.py  errors.py  validators.py
apps/invoice-ocr/backend/app/repositories/: __init__.py  companies_repository.py  curation_repository.py  invoice_repository.py  items_repository.py  ocr_repository.py  sales_records_repository.py  salespeople_repository.py  settings_repository.py
apps/invoice-ocr/backend/app/routers/: companies.py  curation.py  invoices.py  items.py  ocr.py  sales_records.py  salespeople.py  settings.py
apps/invoice-ocr/backend/app/schemas/: curation.py
apps/invoice-ocr/backend/app/services/: __init__.py  companies_service.py  curation_service.py  export_service.py  invoice_service.py  items_service.py  ocr_correction.py  ocr_service.py  sales_records_service.py  salespeople_service.py  settings_service.py
apps/invoice-ocr/backend/tests/: conftest.py  test_backup_db.py  test_health.py  test_static.py  test_version_sync.py
apps/invoice-ocr/backend/tests/contract/: test_companies_routes.py  test_curation_routes.py  test_invoices_routes.py  test_items_routes.py  test_ocr_routes.py  test_sales_records_routes.py  test_salespeople_routes.py  test_settings_routes.py
apps/invoice-ocr/backend/tests/fixtures/: companies_data.py  items_data.py  sales_records_data.py  salespeople_data.py  schema_test.sql  settings_data.py  test_data.py
apps/invoice-ocr/backend/tests/integration/: test_companies_repository.py  test_curation_schema.py  test_invoice_repository.py  test_items_repository.py  test_ocr_repository.py  test_ocr_schema.py  test_ocr_service.py  test_sales_records_repository.py  test_salespeople_repository.py  test_settings_repository.py
apps/invoice-ocr/backend/tests/unit/: test_companies_service.py  test_config.py  test_db.py  test_envelope.py  test_errors_conflict.py  test_errors_validation.py  test_export_service.py  test_invoice_service.py  test_items_service.py  test_ocr_correction.py  test_sales_records_service.py  test_salespeople_service.py  test_settings_service.py  test_validators.py
apps/invoice-ocr/ml/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
apps/invoice-ocr/ml/handwriting/: canon.py  dataset_build.py  fewshot.py  grid_v4.py  group.py  grouping.py  infer_job.py  infer_photo.py  rectify.py  rows.py  train_contrastive.py
apps/invoice-ocr/ml/ocr_poc/: __init__.py  __main__.py  assemble.py  config.py  crop.py  data.py  db.py  detect.py  match.py  normalize.py  recognize.py  report.py  score.py  validate.py
apps/invoice-ocr/ml/tests/: conftest.py  test_assemble.py  test_assemble_result.py  test_crop.py  test_data.py  test_db.py  test_detect.py  test_match.py  test_normalize.py  test_pipeline_smoke.py  test_recognize.py  test_report.py  test_score.py  test_validate.py  test_worker_db.py  test_worker_poll.py
apps/invoice-ocr/ml/tools/: spike_ppstructure.py
apps/invoice-ocr/ml/worker/: db.py  main.py  poll.py
db/: README.md  migration_001_phase1_base.sql  migration_002_company_item_extend.sql  migration_003_app_settings.sql  migration_004_company_fax_sms_target.sql  migration_005_vehicle_no_extend.sql  migration_006_sales_performance.sql  migration_007_ml_seam.sql  migration_008_curation_training_pairs.sql  migration_add_deduction.sql  migration_add_recipient2.sql  migration_poc_to_production.sql  schema.sql
deploy/env/: backend.env.example  ml-worker.env.example
deploy/launchd/: ai.sjmj.backend.plist.template  ai.sjmj.ml-worker.plist.template
docs/adr/: 0001-ml-model-artifacts-live-and-train-on-macmini.md  0002-single-process-device-separated-ml-worker.md  0003-retraining-manual-first-then-automate.md  0004-curation-gate-and-training-pairs-read-model.md  0005-item-crop-widening-is-algorithmic-not-full-automation.md
docs/agents/: domain.md
docs/research/: 2026-06-26-image-rectification-dewarp-survey.md
docs/superpowers/: 2026-06-26-sp2-grouping-progress.md
scripts/: backup-db.sh  db-verify.sh  install-launchagent-ml-worker.sh  install-launchagent.sh  kslim-sync-diff.py  migrate-db.sh  release.sh  run-backend.sh  run-ml-worker.sh  sync-version.sh
(+199 files in other folders)
