[project]
name = "sjmj-ai-invoice-ocr-ml"
version = "0.1.0"
description = "sjmj-ai invoice-ocr SP1 — OCR PoC 숫자 수직 슬라이스 (오프라인 CLI)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pillow>=10.0",
]

[project.optional-dependencies]
ml = [
    "paddleocr>=2.7",
    "paddlepaddle>=2.6",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false
