[project]
name = "sjmj-ai-invoice-ocr-ml"
version = "0.1.0"
description = "sjmj-ai invoice-ocr SP1 — OCR PoC 숫자 수직 슬라이스 (오프라인 CLI)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pillow>=10.0",
]

[project.optional-dependencies]
ml = [
    "paddleocr>=3.0",
    "paddlepaddle>=3.0",
    "paddlex[ocr]>=3.4",
    "numpy>=1.26",
]
worker = [
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Google pyguide 핵심 lint 룰 — 도구가 강제 가능한 부분만.
# E/W: pycodestyle errors/warnings (PEP 8)
# F:   pyflakes (사용 안 한 import, undefined name 등)
# N:   pep8-naming (snake_case 함수/변수, PascalCase 클래스, UPPER_CASE 상수)
# UP:  pyupgrade (오래된 문법 → 모던 문법)
# B:   flake8-bugbear (흔한 버그 패턴)
# SIM: flake8-simplify (단순화 가능한 코드)
# I:   isort (import 정렬)
# D:   pydocstyle (docstring) — google convention
select = ["E", "W", "F", "N", "UP", "B", "SIM", "I", "D"]
ignore = [
  "D100", # 모듈 docstring 누락 — 너무 빡빡
  "D104", # 패키지 docstring 누락
  "E501", # 줄 길이 (포매터가 처리)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"__init__.py" = ["F401"]
